// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works grid-column - 1/3 1`] = `
.c0 {
  grid-column: 1/3;
}

<div
  className="c0"
/>
`;

exports[`it works grid-row - 1 1`] = `
.c0 {
  grid-row: 1;
}

<div
  className="c0"
/>
`;
